--- a/client-app/public/assets/i18n/diaries/de.json
+++ b/client-app/public/assets/i18n/diaries/de.json
@@ -1,4 +1,5 @@
 {
+    "Loading activity...": "Aktivität laden...",
     "by": "by",
     "when": "Wann geht es los?",
     "starting_point": "Wo ist ein Startpunkt?",
