--- a/client-app/public/assets/i18n/diaries/en.json
+++ b/client-app/public/assets/i18n/diaries/en.json
@@ -1,4 +1,5 @@
 {
+    "Loading activity...": "Loading activity...",
     "by": "by",
     "when": "When does it start?",
     "starting_point": "Where is a starting Point?",
