--- a/client-app/public/assets/i18n/diaries/it.json
+++ b/client-app/public/assets/i18n/diaries/it.json
@@ -1,4 +1,5 @@
 {
+    "Loading activity...": "Caricamento attività...",
     "by": "by",
     "when": "Quando comincia?",
     "starting_point": "Dov'è un punto di partenza?",
