--- a/client-app/public/assets/i18n/home/de.json
+++ b/client-app/public/assets/i18n/home/de.json
@@ -2,5 +2,6 @@
     "welcome back to motoranza": "Willkommen zurück zu Motoranza",
     "enter motoranza": "Eintreten Motoranza",
     "login to enter": "Melden Sie sich an, um einzutreten",
-    "register to enter": "Registrieren Sie sich, um teilzunehmen"
+    "register to enter": "Registrieren Sie sich, um teilzunehmen",
+    "Loading app...": "App wird geladen..."
 }
