LangSwitch Refactor FormsModalsComments Add Forum

--- a/client-app/public/assets/i18n/comments/en.json
+++ b/client-app/public/assets/i18n/comments/en.json
@@ -1,5 +1,9 @@
 {
     "Comments": "Comments",
     "Add your comment": "Add your comment",
-    "Add Reply": "Add Reply"
+    "Add Reply": "Add Reply",
+    "Comment this motofy": "Comment this motofy",
+    "Comment This Diary": "Comment This Diary",
+    "Chat about this mechanic": "Chat about this mechanic",
+    "ago": "ago"
 }
