--- a/client-app/public/assets/i18n/comments/it.json
+++ b/client-app/public/assets/i18n/comments/it.json
@@ -1,5 +1,9 @@
 {
     "Comments":  "Commenti",
     "Add your comment": "Aggiungi il tuo commento",
-    "Add Reply": "Aggiungi risposta"
+    "Add Reply": "Aggiungi risposta",
+    "Comment this motofy": "Commenta questo motofy",
+    "Comment This Diary": "Commenta questo diario",
+    "Chat about this mechanic": "Chatta su questo meccanico",
+    "ago": "fa"
 }
