--- a/client-app/public/assets/i18n/forms/de.json
+++ b/client-app/public/assets/i18n/forms/de.json
@@ -1,7 +1,47 @@
 {
     "Title": "Titel",
     "Body": "Körper",
+    "Cancel": "Abbrechen",
+    "Your motorcycyle brand": "Ihre Motorradmarke",
+    "Description": "Beschreibung",
     "Category": "Kategorie",
+    "Date": "Datum",
+    "Time": "Uhrzeit",
+    "Date and Time": "Datum und Uhrzeit",
+    "Country": "Land",
+    "City": "Stadt",
+    "Departure/Starting Point": "Abfahrt/Startpunkt",
+    "Destination": "Ziel",
     "Submit": "Absenden",
-    "Cancel": "Abbrechen"
+    "Your image is uploaded, please give us more details": "Ihr Bild wurde hochgeladen, bitte geben Sie uns weitere Details",
+    "What happened today?": "Was ist heute passiert?",
+    "What is your mood today?": "Wie ist Ihre Stimmung heute?",
+    "What is weather like today?": "Wie ist das Wetter heute?",
+    "What is road like": "Wie war die Straße?",
+    "Country you are in": "Land, in dem Sie sich befinden",
+    "City you are in": "Stadt, in dem Sie sich befinden",
+    "Motorcycle name": "Motorradname",
+    "Year of production": "Produktionsjahr",
+    "Brand": "Marke",
+    "Model": "Modell",
+    "Cubics": "Kubik",
+    "Number of kilometers": "Kilometerzahl",
+    "Price paid": "Bezahlter Preis",
+    "Estimated value": "Geschätzter Wert",
+    "Register as a customer of this mechanic is enabling you to review, evaluate, comment and more...": "Die Registrierung als Kunde dieses Mechanikers ermöglicht es Ihnen, zu überprüfen, zu bewerten, zu kommentieren und mehr...",
+    "How would you evaluate this shop?": "Wie würden Sie diesen Shop bewerten?",
+    "Would you recommend this shop?": "Würden Sie diesen Shop weiterempfehlen?",
+    "Please write a couple of words about your experience with this mechanic shop": "Bitte schreiben Sie ein paar Worte über Ihre Erfahrung mit dieser Werkstatt",
+    "I have read and understood the rules of a portal": "Ich habe die Regeln eines Portals gelesen und verstanden",
+    "No, don't register me": "Nein, registriere mich nicht",
+    "Yes, register me as a customer": "Ja, registriere mich als Kunde",
+    "Loading values...": "Lade Werte...",
+    "Name": "Name",
+    "Are you owner or customer of this shop?": "Sind Sie Inhaber oder Kunde dieses Shops?",
+    "What brands are you specialized in *": "Auf welche Marken sind Sie spezialisiert  *",
+    "Address  *": "Adresse  *",
+    "Phone *": "Telefon *",
+    "Email": "Email",
+    "Website": "Website",
+    "Year of Start *": "Startjahr *"
 }
