--- a/client-app/public/assets/i18n/forms/en.json
+++ b/client-app/public/assets/i18n/forms/en.json
@@ -3,5 +3,45 @@
     "Body": "Body",
     "Category": "Category",
     "Submit": "Submit",
-    "Cancel": "Cancel"
+    "Cancel": "Cancel",
+    "Your motorcycyle brand": "Your motorcycyle brand",
+    "Description": "Description",
+    "Date": "Date",
+    "Time": "Time",
+    "Date and Time": "Date and Time",
+    "Country": "Country",
+    "City": "City",
+    "Departure/Starting Point": "Departure/Starting Point",
+    "Destination": "Destination",
+    "Your image is uploaded, please give us more details": "Your image is uploaded, please give us more details",
+    "What happened today?": "What happened today?",
+    "What is your mood today?": "What is your mood today?",
+    "What is weather like today?": "What is weather like today?",
+    "What is road like": "What is road like?",
+    "Country you are in": "Country you are in",
+    "City you are in": "City you are in",
+    "Motorcycle name": "Motorcycle name",
+    "Year of production": "Year of production",
+    "Number of kilometers": "Number of kilometers",
+    "Brand": "Brand",
+    "Model": "Model",
+    "Cubics": "Cubics",
+    "Price paid": "Price paid ",
+    "Estimated value": "Estimated value",
+    "Register as a customer of this mechanic is enabling you to review, evaluate, comment and more...": "Register as a customer of this mechanic is enabling you to review, evaluate, comment and more...",
+    "How would you evaluate this shop?": "How would you evaluate this shop?",
+    "Would you recommend this shop?": "Would you recommend this shop?",
+    "Please write a couple of words about your experience with this mechanic shop": "Please write a couple of words about your experience with this mechanic shop",
+    "I have read and understood the rules of a portal": "I have read and understood the rules of a portal",
+    "No, don't register me": "No, don't register me",
+    "Yes, register me as a customer": "Yes, register me as a customer",
+    "Loading values...": "Loading values...",
+    "Name": "Name",
+    "Are you owner or customer of this shop?": "Are you owner or customer of this shop?",
+    "What brands are you specialized in *": "What brands are you specialized in *",
+    "Address *": "Address  *",
+    "Phone *": "Phone *",
+    "Email": "Email",
+    "Website": "Website",
+    "Year of Start *": "Year of Start *"
 }
