--- a/client-app/public/assets/i18n/forms/it.json
+++ b/client-app/public/assets/i18n/forms/it.json
@@ -1,7 +1,47 @@
 {
     "Title": "Titolo",
     "Body": "Corpo",
+    "Cancel": "Annulla",
+    "Your motorcycyle brand": "Il tuo marchio di moto",
+    "Description": "Descrizione",
     "Category": "Categoria",
+    "Date": "Data",
+    "Time": "Ora",
+    "Date and Time": "Data e ora",
+    "Country": "Paese",
+    "City": "Città",
+    "Departure/Starting Point": "Partenza/Punto di partenza",
+    "Destination": "Destinazione",
     "Submit": "Invia",
-    "Cancel": "Annulla"
+    "Your image is uploaded, please give us more details": "La tua immagine è stata caricata, per favore dacci maggiori dettagli",
+    "What happened today?": "Cosa è successo oggi?",
+    "What is your mood today?": "Qual è il tuo umore oggi?",
+    "What is weather like today?": "Com'è il tempo oggi?",
+    "What is road like": "Com'era la strada?",
+    "Country you are in": "Paese in cui ti trovi",
+    "City you are in": "Città in cui ti trovi",
+    "Motorcycle name": "Nome moto",
+    "Year of production": "Anno di produzione",
+    "Brand":  "Marca",
+    "Model": "Modello",
+    "Cubics": "Cubi",
+    "Number of kilometers": "Numero di chilometri",
+    "Price paid":  "Prezzo pagato",
+    "Estimated value": "Valore stimato",
+    "Register as a customer of this mechanic is enabling you to review, evaluate, comment and more...": "Registrati come cliente di questo meccanico ti consente di rivedere, valutare, commentare e altro...",
+    "How would you evaluate this shop?": "Come valuteresti questo negozio?",
+    "Would you recommend this shop?": "Consiglieresti questo negozio?",
+    "Please write a couple of words about your experience with this mechanic shop": "Per favore, scrivi un paio di parole sulla tua esperienza con questa officina",
+    "I have read and understood the rules of a portal": "Ho letto e compreso le regole di un portale",
+    "No, don't register me": "No, non registrarmi",
+    "Yes, register me as a customer": "Sì, registrami come cliente",
+    "Loading values...": "Caricamento valori...",
+    "Name": "Nome",
+    "Are you owner or customer of this shop?": "Sei proprietario o cliente di questo negozio?",
+    "What brands are you specialized in *": "In quali marchi sei specializzato",
+    "Address *": "Indirizzo *",
+    "Phone *": "Telefono *",
+    "Email": "E-mail",
+    "Website": "Sito web",
+    "Year of Start *": "Anno di inizio *"
 }
