--- a/client-app/public/assets/i18n/gallery/de.json
+++ b/client-app/public/assets/i18n/gallery/de.json
@@ -12,9 +12,6 @@
     "By people I follow": "Von Personen, denen ich folge ",
     "champs at the moment": "Champions im Moment",
     "Highest Rated": "Am höchsten bewertet",
-    "Comment this motofy": "Kommentiere dieses Motofy",
-    "Add your comment": "Kommentar hinzufügen",
-    "Add Reply": "Antwort hinzufügen",
     "Manage": "Verwalten",
     "Delete": "Löschen",
     "Embraced": "Umarmt",
@@ -39,18 +36,5 @@
     " present value": " Barwert",
     "Your image is uploaded, please give us more details": "Ihr Bild wurde hochgeladen, bitte geben Sie uns weitere Details",
     "Loading values...": "Lade Werte...",
-    "Motorcycle name": "Motorradname",
-    "Description":  "Beschreibung",
-    "City": "Stadt",
-    "Country": "Land",
-    "Brand": "Marke",
-    "Model": "Modell",
-    "Cubics": "Kubik",
-    "Number of kilometers": "Kilometerzahl",
-    "Estimated value": "Geschätzter Wert",
-    "Submit": "Absenden",
-    "Cancel": "Abbrechen",
-    "Sure you want to do this (cannot undo)?": "Sind Sie sicher, dass Sie dies tun möchten (kann nicht rückgängig gemacht werden)?",
-    "Yes, delete it!":"Ja, löschen!",
-    "No, keep it": "Nein, behalte es"
+    "Cancel": "Abbrechen"
 }
