--- a/client-app/public/assets/i18n/gallery/it.json
+++ b/client-app/public/assets/i18n/gallery/it.json
@@ -12,9 +12,6 @@
     "By people I follow": "Da persone che seguo",
     "champs at the moment": "campioni del momento",
     "Highest Rated": "Valutazione più alta",
-    "Comment this motofy": "Commenta questo motofy",
-    "Add your comment": "Aggiungi il tuo commento",
-    "Add Reply": "Aggiungi risposta",
     "Manage": "Gestisci",
     "Delete":  "Elimina",
     "Embraced": "Abbracciato",
@@ -39,18 +36,5 @@
     " present value": " valore attuale",
     "Your image is uploaded, please give us more details": "La tua immagine è stata caricata, per favore dacci maggiori dettagli",
     "Loading values...": "Caricamento valori...",
-    "Motorcycle name": "Nome moto",
-    "Description": "Descrizione",
-    "City": "Città",
-    "Country": "Paese",
-    "Brand":  "Marca",
-    "Model": "Modello",
-    "Cubics": "Cubi",
-    "Number of kilometers": "Numero di chilometri",
-    "Estimated value": "Valore stimato",
-    "Submit": "Invia",
-    "Cancel": "Annula",
-    "Sure you want to do this (cannot undo)?": "Sicuro di voler eseguire questa operazione (non è possibile annullare)?",
-    "Yes, delete it!":"Sì, eliminalo!",
-    "No, keep it": "No, tienilo"
+    "Cancel": "Annula"
 }
