--- a/client-app/public/assets/i18n/gallery/en.json
+++ b/client-app/public/assets/i18n/gallery/en.json
@@ -12,9 +12,6 @@
     "By people I follow": "By people I follow ",
     "champs at the moment": "champs at the moment",
     "Highest Rated": "Highest Rated",
-    "Comment this motofy": "Comment this motofy",
-    "Add your comment": "Add your comment",
-    "Add Reply": "Add Reply",
     "Manage": "Manage",
     "Delete": "Delete",
     "Embraced": "Embraced",
@@ -32,24 +29,12 @@
     "In": "In",
     "Engine": "Engine",
     "cc": "cc",
-    "done": "done",    "kilometers": "kilometers",
+    "done": "done",    
+    "kilometers": "kilometers",
     "Price paid": "Price paid ",
     " Euro": " Euro",
     " present value": " present value",
     "Your image is uploaded, please give us more details": "Your image is uploaded, please give us more details",
     "Loading values...": "Loading values...",
-    "Motorcycle name": "Motorcycle name",
-    "Description": "Description",
-    "City": "City",
-    "Country": "Country",
-    "Brand": "Brand",
-    "Model": "Model",
-    "Cubics": "Cubics",
-    "Number of kilometers": "Number of kilometers",
-    "Estimated value": "Estimated value",
-    "Submit": "Submit",
-    "Cancel": "Cancel",
-    "Sure you want to do this (cannot undo)?": "Sure you want to do this (cannot undo)?",
-    "Yes, delete it!": "Yes, delete it!",
-    "No, keep it": "No, keep it"
+    "Cancel": "Cancel"
 }
