--- a/client-app/public/assets/i18n/modals/it.json
+++ b/client-app/public/assets/i18n/modals/it.json
@@ -3,5 +3,12 @@
     "Yes, delete it": "Sì, eliminalo",
     "No, don't delete": "No, non eliminare",
     "Search all": "Cerca in tutto",
-    "Filter by category": "Filtra per categoria"
+    "Filter by category": "Filtra per categoria",
+    "Sure you want to do this?": "Sicuro di volerlo fare?",
+    "Yes, I finished my trip!": "Sì, ho finito il mio viaggio!",
+    "No, keep it active": "No, tienilo attivo",
+    "Sure you want to do this? You cannot go back...": "Sicuro di volerlo fare? Non puoi tornare indietro...",
+    "Sure you want to do this (cannot undo)?": "Sicuro di voler eseguire questa operazione (non è possibile annullare)?",
+    "Yes, delete it!":"Sì, eliminalo!",
+    "No, keep it": "No, tienilo"
 }
