--- a/client-app/public/assets/i18n/forms/de.json
+++ b/client-app/public/assets/i18n/forms/de.json
@@ -1,5 +1,5 @@
 {
-    "Title": "Titel",
+    "Title": "Titel *",
     "Body": "Körper",
     "Cancel": "Abbrechen",
     "Your motorcycyle brand": "Ihre Motorradmarke",
@@ -8,7 +8,7 @@
     "Date": "Datum",
     "Time": "Uhrzeit",
     "Date and Time": "Datum und Uhrzeit",
-    "Country": "Land",
+    "Country": "Land *",
     "City": "Stadt",
     "Departure/Starting Point": "Abfahrt/Startpunkt",
     "Destination": "Ziel",
@@ -41,7 +41,22 @@
     "What brands are you specialized in *": "Auf welche Marken sind Sie spezialisiert  *",
     "Address  *": "Adresse  *",
     "Phone *": "Telefon *",
+    "Phone": "Telefon",
     "Email": "Email",
     "Website": "Website",
-    "Year of Start *": "Startjahr *"
+    "Year of Start *": "Startjahr *",
+    "Brand not asigned": "Marke nicht zugeordnet",
+    "Category is required": "Kategorie ist erforderlich",
+    "City is required": "Stadt ist erforderlich",
+    "Country is required": "Land ist erforderlich",
+    "Description is required": "Beschreibung erforderlich",
+    "Description needs to be at least 5 characters": "Beschreibung muss mindestens 5 Zeichen lang sein",
+    "Model not asigned": "Modell nicht zugewiesen",
+    "Phone is required": "Telefon ist erforderlich",
+    "Phone must be numeric value": "Telefon muss ein numerischer Wert sein",
+    "Phone needs to be at least 9 characters": "Telefon muss mindestens 9 Zeichen lang sein",
+    "Price": "Preis *",
+    "Price is required": "Preis ist erforderlich",
+    "Price must be numeric value": "Preis muss numerischer Wert sein",
+    "Title is required": "Titel ist erforderlich"
 }
