--- a/client-app/public/assets/i18n/forms/it.json
+++ b/client-app/public/assets/i18n/forms/it.json
@@ -1,5 +1,5 @@
 {
-    "Title": "Titolo",
+    "Title": "Titolo *",
     "Body": "Corpo",
     "Cancel": "Annulla",
     "Your motorcycyle brand": "Il tuo marchio di moto",
@@ -8,7 +8,7 @@
     "Date": "Data",
     "Time": "Ora",
     "Date and Time": "Data e ora",
-    "Country": "Paese",
+    "Country": "Paese *",
     "City": "Città",
     "Departure/Starting Point": "Partenza/Punto di partenza",
     "Destination": "Destinazione",
@@ -41,7 +41,22 @@
     "What brands are you specialized in *": "In quali marchi sei specializzato",
     "Address *": "Indirizzo *",
     "Phone *": "Telefono *",
+    "Phone": "Telefono",
     "Email": "E-mail",
     "Website": "Sito web",
-    "Year of Start *": "Anno di inizio *"
+    "Year of Start *": "Anno di inizio *",
+    "Brand not asigned": "Marca non assegnata",
+    "Category is required": "La categoria è richiesta",
+    "City is required": "Città è richiesta",
+    "Country is required": "Il Paese è richiesto",
+    "Description is required": "Descrizione richiesta",
+    "Description needs to be at least 5 characters": "La descrizione deve contenere almeno 5 caratteri",
+    "Model not asigned": "Modello non assegnato",
+    "Phone is required": "Telefono necessario",
+    "Phone must be numeric value": "Il telefono deve essere un valore numerico",
+    "Phone needs to be at least 9 characters": "Il telefono deve contenere almeno 9 caratteri",
+    "Price": "Prezzo *",
+    "Price is required": "Il prezzo è richiesto",
+    "Price must be numeric value": "Il prezzo deve essere un valore numerico",
+    "Title is required": "Titolo richiesto"
 }
