--- a/client-app/public/assets/i18n/modals/en.json
+++ b/client-app/public/assets/i18n/modals/en.json
@@ -10,5 +10,6 @@
     "Sure you want to do this? You cannot go back...": "Sure you want to do this? You cannot go back...",
     "Sure you want to do this (cannot undo)?": "Sure you want to do this (cannot undo)?",
     "Yes, delete it!": "Yes, delete it!",
-    "No, keep it": "No, keep it"
+    "No, keep it": "No, keep it",
+    "No, cancel": "No, cancel"
 }
