LangSwitch Forms and Validation

--- a/client-app/public/assets/i18n/forms/de.json
+++ b/client-app/public/assets/i18n/forms/de.json
@@ -9,7 +9,7 @@
     "Time": "Uhrzeit",
     "Date and Time": "Datum und Uhrzeit",
     "Country": "Land *",
-    "City": "Stadt",
+    "City": "Stadt *",
     "Departure/Starting Point": "Abfahrt/Startpunkt",
     "Destination": "Ziel",
     "Submit": "Absenden",
@@ -39,7 +39,7 @@
     "Name": "Name",
     "Are you owner or customer of this shop?": "Sind Sie Inhaber oder Kunde dieses Shops?",
     "What brands are you specialized in *": "Auf welche Marken sind Sie spezialisiert  *",
-    "Address  *": "Adresse  *",
+    "Address *": "Adresse *",
     "Phone *": "Telefon *",
     "Phone": "Telefon",
     "Email": "Email",
@@ -58,5 +58,48 @@
     "Price": "Preis *",
     "Price is required": "Preis ist erforderlich",
     "Price must be numeric value": "Preis muss numerischer Wert sein",
-    "Title is required": "Titel ist erforderlich"
+    "Title is required": "Titel ist erforderlich",
+    
+    "The location city is required": "Die Stadt des Standorts ist erforderlich",
+    "The location country is required": "Das Land des Standorts ist erforderlich",
+    "Address is required": "Adresse ist erforderlich",
+    "Invalid email address": "Ungültige E-Mail-Adresse",
+    "Year of start is required": "Startjahr ist erforderlich",
+    "Brand is required": "Marke ist erforderlich",
+    "Place of departure is required": "Abfahrtsort ist erforderlich",
+    "Place of destination is required": "Bestimmungsort ist erforderlich",
+    "Date is required": "Datum ist erforderlich",
+    "Time is required": "Zeit ist erforderlich",
+    "The mood is required": "Stimmung ist gefragt",
+    "Power of engine is required": "Motorleistung ist erforderlich",
+    "Number of kilometers is required": "Kilometerzahl ist erforderlich",
+    "Model is required": "Modell ist erforderlich",
+    "Power of engine must be numeric value": "Motorleistung muss ein numerischer Wert sein",
+    "Number of kilometers must be numeric value": "Kilometerzahl muss numerischer Wert sein",
+    "Name is required": "Name ist erforderlich",
+    "Email is required": "E-Mail ist erforderlich",
+    "Password is required": "Passwort ist erforderlich",
+    "Year of production is required": "Produktionsjahr ist erforderlich",
+    "Login to Motoranza": "Bei Motoranza anmelden",
+    "Password": "Passwort",
+    "Invalid email address or password": "E-Mail-Adresse oder Passwort ungültig",
+    "Login": "Einloggen",
+    "Username": "Benutzername",
+    "Display Name": "Anzeigename",
+    "Confirmation of password is required": "Bestätigung des Passworts erforderlich",
+    "Passwords do not match": "Passwörter stimmen nicht überein",
+    "Sign up to Motoranza": "Bei Motoranza registrieren",
+    "Confirm Password": "Passwort bestätigen",
+    "Register": "Registrieren",
+    "Username is required": "Benutzername ist erforderlich",
+    "Display Name is required": "Anzeigename ist erforderlich",
+    "Verification email resent - please check your email": "Bestätigungs-E-Mail erneut gesendet - Bitte überprüfen Sie Ihre E-Mail",
+    "Successfully registered!": "Erfolgreich registriert!",
+    "Please check your email (including junk email) for the verification email": "Bitte überprüfen Sie Ihre E-Mail (einschließlich Junk-E-Mail) auf die Bestätigungs-E-Mail",
+    "Didn't receive the email? Click the below button to resend": "Haben Sie die E-Mail nicht erhalten? Klicken Sie auf die Schaltfläche unten, um sie erneut zu senden",
+    "Resend email": "E-Mail erneut senden",
+    "Verifying...": "Überprüfe ...",
+    "Verication failed - you can try resending the verification email": "Verifizierung fehlgeschlagen - Sie können versuchen, die Verifizierungs-E-Mail erneut zu senden",
+    "Email has been verified - you can now login": "E-Mail wurde bestätigt - Sie können sich jetzt anmelden",
+    "Email verification": "E-Mail-Bestätigung"
 }
