--- a/client-app/public/assets/i18n/forms/en.json
+++ b/client-app/public/assets/i18n/forms/en.json
@@ -10,7 +10,7 @@
     "Time": "Time",
     "Date and Time": "Date and Time",
     "Country": "Country *",
-    "City": "City",
+    "City": "City *",
     "Departure/Starting Point": "Departure/Starting Point",
     "Destination": "Destination",
     "Your image is uploaded, please give us more details": "Your image is uploaded, please give us more details",
@@ -58,5 +58,48 @@
     "Phone needs to be at least 9 characters": "Phone needs to be at least 9 characters",
     "Phone is required": "Phone is required",
     "Price is required": "Price is required",
-    "Price must be numeric value": "Price must be numeric value"
+    "Price must be numeric value": "Price must be numeric value",
+    
+    "The location city is required": "The location city is required",
+    "The location country is required": "The location country is required",
+    "Address is required": "Address is required",
+    "Invalid email address": "Invalid email address",
+    "Year of start is required": "Year of start is required",
+    "Brand is required": "Brand is required",
+    "Place of departure is required": "Place of departure is required",
+    "Place of destination is required": "Place of destination is required",
+    "Date is required": "Date is required",
+    "Time is required": "Time is required",
+    "The mood is required": "The mood is required",
+    "Power of engine is required": "Power of engine is required",
+    "Number of kilometers is required": "Number of kilometers is required",
+    "Model is required": "Model is required",
+    "Power of engine must be numeric value": "Power of engin must be numeric valu",
+    "Number of kilometers must be numeric value": "Number of kilometers must be numeric value",
+    "Name is required": "Name is required",
+    "Email is required": "Email is required",
+    "Password is required": "Password is required",
+    "Year of production is required": "Year of production is required",
+    "Login to Motoranza": "Login to Motoranza",
+    "Password": "Password",
+    "Invalid email address or password": "Invalid email address or password",
+    "Login": "Login",
+    "Username": "Username",
+    "Display Name": "Display Name",
+    "Confirmation of password is required": "Confirmation of password is required",
+    "Passwords do not match": "Passwords do not match",
+    "Sign up to Motoranza": "Sign up to Motoranza",
+    "Confirm Password": "Confirm Password",
+    "Register": "Register",
+    "Username is required": "Username is required",
+    "Display Name is required": "Display Name is required",
+    "Verification email resent - please check your email": "Verification email resent - please check your email",
+    "Successfully registered!": "Successfully registered!",
+    "Please check your email (including junk email) for the verification email": "Please check your email (including junk email) for the verification email",
+    "Didn't receive the email? Click the below button to resend": "Didn't receive the email? Click the below button to resend",
+    "Resend email": "Resend email",
+    "Verifying...": "Verifying...",
+    "Verication failed - you can try resending the verification email": "Verication failed - you can try resending the verification email",
+    "Email has been verified - you can now login": "Email has been verified - you can now login",
+    "Email verification": "Email verification"
 }
