--- a/client-app/public/assets/i18n/home/it.json
+++ b/client-app/public/assets/i18n/home/it.json
@@ -3,5 +3,6 @@
     "enter motoranza": "Entra Motoranza",
     "login to enter": "Accedi per entrare",
     "register to enter": "Registrati per entrare",
-    "Loading app...": "Caricamento app.."
+    "Loading app...": "Caricamento app..",
+    "Welcome to Motoranza": "Benvenuti in Motoranza"
 }
