--- a/client-app/public/assets/i18n/forms/it.json
+++ b/client-app/public/assets/i18n/forms/it.json
@@ -9,7 +9,7 @@
     "Time": "Ora",
     "Date and Time": "Data e ora",
     "Country": "Paese *",
-    "City": "Città",
+    "City": "Città *",
     "Departure/Starting Point": "Partenza/Punto di partenza",
     "Destination": "Destinazione",
     "Submit": "Invia",
@@ -22,11 +22,11 @@
     "City you are in": "Città in cui ti trovi",
     "Motorcycle name": "Nome moto",
     "Year of production": "Anno di produzione",
-    "Brand":  "Marca",
+    "Brand": "Marca",
     "Model": "Modello",
     "Cubics": "Cubi",
     "Number of kilometers": "Numero di chilometri",
-    "Price paid":  "Prezzo pagato",
+    "Price paid": "Prezzo pagato",
     "Estimated value": "Valore stimato",
     "Register as a customer of this mechanic is enabling you to review, evaluate, comment and more...": "Registrati come cliente di questo meccanico ti consente di rivedere, valutare, commentare e altro...",
     "How would you evaluate this shop?": "Come valuteresti questo negozio?",
@@ -58,5 +58,48 @@
     "Price": "Prezzo *",
     "Price is required": "Il prezzo è richiesto",
     "Price must be numeric value": "Il prezzo deve essere un valore numerico",
-    "Title is required": "Titolo richiesto"
+    "Title is required": "Titolo richiesto",
+    
+    "The location city is required": "La città della posizione è richiesta",
+    "The location country is required": "Il paese di ubicazione è richiesto",
+    "Address is required": "L'indirizzo è richiesto",
+    "Invalid email address": "Indirizzo email non valido",
+    "Year of start is required": "È richiesto l'anno di inizio",
+    "Brand is required": "È richiesto il marchio",
+    "Place of departure is required": "Luogo di partenza richiesto",
+    "Place of destination is required": "Luogo di destinazione richiesto",
+    "Date is required": "La data è richiesta",
+    "Time is required": "Il tempo è richiesto",
+    "The mood is required": "L'umore è richiesto",
+    "Power of engine is required": "È richiesta la potenza del motore",
+    "Number of kilometers is required": "Numero di chilometri richiesto",
+    "Model is required": "Modello richiesto",
+    "Power of engine must be numeric value": "La potenza del motore deve essere un valore numerico",
+    "Number of kilometers must be numeric value": "Il numero di chilometri deve essere un valore numerico",
+    "Name is required": "Il nome è richiesto",
+    "Email is required": "E-mail richiesta",
+    "Password is required": "Password è richiesta",
+    "Year of production is required": "E' richiesto l'anno di produzione",
+    "Login to Motoranza": "Accedi a Motoranza",
+    "Password": "Password",
+    "Invalid email address or password": "Indirizzo email o password non validi",
+    "Login": "Entra",
+    "Username": "Nome utente",
+    "Display Name": "Nome da visualizzare",
+    "Confirmation of password is required": "È richiesta la conferma della password",
+    "Passwords do not match": "Le password non corrispondono",
+    "Sign up to Motoranza": "Iscriviti a Motoranza",
+    "Confirm Password": "Conferma password",
+    "Register": "Registrati",
+    "Username is required": "Nome utente richiesto",
+    "Display Name is required": "Il nome visualizzato è richiesto",
+    "Verification email resent - please check your email": "Email di verifica inviata nuovamente - controlla la tua email",
+    "Successfully registered!": "Registrato con successo!",
+    "Please check your email (including junk email) for the verification email": "Per favore controlla la tua email (inclusa la posta indesiderata) per l'email di verifica",
+    "Didn't receive the email? Click the below button to resend": "Non hai ricevuto l'e-mail? Fai clic sul pulsante in basso per inviare nuovamente",
+    "Resend email": "Invia nuovamente email",
+    "Verifying...": "Verifica in corso...",
+    "Verication failed - you can try resending the verification email": "Verifica non riuscita - puoi provare a inviare nuovamente l'e-mail di verifica",
+    "Email has been verified - you can now login": "L'e-mail è stata verificata - ora puoi accedere",
+    "Email verification": "Verifica e-mail"
 }
