--- a/client-app/public/assets/i18n/home/en.json
+++ b/client-app/public/assets/i18n/home/en.json
@@ -3,5 +3,6 @@
     "enter motoranza": "Enter Motoranza",
     "login to enter": "Login to Enter",
     "register to enter": "Register to Enter",
-    "Loading app...": "Loading app..."
+    "Loading app...": "Loading app...",
+    "Welcome to Motoranza": "Welcome to Motoranza"
 }
