--- a/client-app/public/assets/i18n/navbar/en.json
+++ b/client-app/public/assets/i18n/navbar/en.json
@@ -17,6 +17,6 @@
     "forumpost pop": "Ask about anything. Someone from community will have the right answer. Help others",
     "product to sell": "Product to sell",
     "product to sell pop": "Publish an item that you want to sell",
-    "my profile": "my profile",
-    "logout": "logout"
+    "my profile": "My profile",
+    "logout": "Logout"
 }
