Textarea Resize and Emoi, Manager Styles Uniform

--- a/client-app/public/assets/i18n/forum/de.json
+++ b/client-app/public/assets/i18n/forum/de.json
@@ -29,6 +29,7 @@
     "you already rated": "Sie haben bereits bewertet",
     "Manage your post": "Post verwalten",
     "Manage": "Verwalten",
+    "Edit": "Bearbeiten",
     "Cancel": "Abbrechen",
     "Delete": "Löschen",
     "Interesting": "Interessant",
