--- a/client-app/public/assets/i18n/forum/en.json
+++ b/client-app/public/assets/i18n/forum/en.json
@@ -29,6 +29,7 @@
     "you already rated": "you already rated",
     "Manage your post": "Manage your post",
     "Manage": "Manage",
+    "Edit": "Edit",
     "Cancel": "Cancel",
     "Delete": "Delete",
     "Interesting": "Interesting",
