--- a/client-app/public/assets/i18n/forum/it.json
+++ b/client-app/public/assets/i18n/forum/it.json
@@ -29,6 +29,7 @@
     "you already rated": "hai già valutato",
     "Manage your post": "Gestisci il tuo post",
     "Manage": "Gestisci",
+    "Edit": "Modifica",
     "Cancel": "Annulla",
     "Delete": "Elimina",
     "Interesting": "Interessante",
