--- a/client-app/public/assets/i18n/gallery/de.json
+++ b/client-app/public/assets/i18n/gallery/de.json
@@ -13,6 +13,7 @@
     "champs at the moment": "Champions im Moment",
     "Highest Rated": "Am höchsten bewertet",
     "Manage": "Verwalten",
+    "Edit": "Bearbeiten",
     "Delete": "Löschen",
     "Embraced": "Umarmt",
     "Embrace": "Umarmen",
