--- a/client-app/public/assets/i18n/gallery/en.json
+++ b/client-app/public/assets/i18n/gallery/en.json
@@ -13,6 +13,7 @@
     "champs at the moment": "champs at the moment",
     "Highest Rated": "Highest Rated",
     "Manage": "Manage",
+    "Edit": "Edit",
     "Delete": "Delete",
     "Embraced": "Embraced",
     "Embrace": "Embrace",
