--- a/client-app/public/assets/i18n/gallery/it.json
+++ b/client-app/public/assets/i18n/gallery/it.json
@@ -7,13 +7,14 @@
     "or choose from built in filters": "o scegli da filtri integrati",
     "All motofies": "Tutte le moto",
     "Best Rated": "Migliore valutazione",
-    "Most Embraced":  "Più abbracciati",
+    "Most Embraced": "Più abbracciati",
     "I Embraced": "Ho abbracciato",
     "By people I follow": "Da persone che seguo",
     "champs at the moment": "campioni del momento",
     "Highest Rated": "Valutazione più alta",
     "Manage": "Gestisci",
-    "Delete":  "Elimina",
+    "Edit": "Modifica",
+    "Delete": "Elimina",
     "Embraced": "Abbracciato",
     "Embrace": "Abbraccio",
     "Average Rating:": "Valutazione media:",
@@ -29,9 +30,9 @@
     "In": "In",
     "Engine": "Motore",
     "cc": "cc",
-    "done": "cavalcato",    
+    "done": "cavalcato",
     "kilometers": "chilometri",
-    "Price paid":  "Prezzo pagato",
+    "Price paid": "Prezzo pagato",
     " Euro": " Euro",
     " present value": " valore attuale",
     "Your image is uploaded, please give us more details": "La tua immagine è stata caricata, per favore dacci maggiori dettagli",
