--- a/client-app/public/assets/i18n/mechanics/de.json
+++ b/client-app/public/assets/i18n/mechanics/de.json
@@ -25,6 +25,7 @@
     "Register As Customer": "Als Kunde registrieren",
     "Manage mechanic":  "Mechaniker verwalten",
     "Manage": "Verwalten",
+    "Edit": "Bearbeiten",
     "Delete": "Löschen",
     "Cancel": "Abbrechen",
     "People are customers": " Menschen sind Kunden",
