--- a/client-app/public/assets/i18n/mechanics/en.json
+++ b/client-app/public/assets/i18n/mechanics/en.json
@@ -25,12 +25,13 @@
     "Register As Customer": "Register As Customer",
     "Manage mechanic": "Manage mechanic",
     "Manage": "Manage",
+    "Edit": "Edit",
     "Delete": "Delete",
     "Cancel": "Cancel",
-    "People are customers": "People are customers",
-    "Person is customer": "Person is customer",
-    "of this shop": "of this shop",
-    "Recommending": "Recommending",
+    "People are customers": " People are customers",
+    "Person is customer": " Person is customer",
+    "of this shop": " of this shop",
+    "Recommending": " Recommending",
     "Owner": "Owner",
     "'s testimony about": "'s testimony about ",
     "Loading mechanic shop...": "Loading mechanic shop..."
