--- a/client-app/public/assets/i18n/mechanics/it.json
+++ b/client-app/public/assets/i18n/mechanics/it.json
@@ -25,6 +25,7 @@
     "Register As Customer": "Registrati come cliente",
     "Manage mechanic": "Gestisci meccanico",
     "Manage": "Gestisci",
+    "Edit": "Modifica",
     "Delete": "Elimina",
     "Cancel":  "Annulla",
     "People are customers": " persone sono clienti",
