--- a/client-app/public/assets/i18n/shop/de.json
+++ b/client-app/public/assets/i18n/shop/de.json
@@ -30,6 +30,7 @@
     "Delete": "Löschen",
     "Mark sold": "Verkauft markieren",
     "Manage": "Verwalten",
+    "Edit": "Bearbeiten",
     "Loading product details...": "Lade Produktdetails ...",
     "The": "Die ",
     "is published": "wird veröffentlicht",
