--- a/client-app/public/assets/i18n/shop/en.json
+++ b/client-app/public/assets/i18n/shop/en.json
@@ -30,8 +30,9 @@
     "Delete": "Delete",
     "Mark sold": "Mark sold",
     "Manage": "Manage",
+    "Edit": "Edit",
     "Loading product details...": "Loading product details...",
-    "The": "The",
+    "The": "The ",
     "is published": "is published",
     "seen": "seen",
     "times and expires": "times and expires",
