--- a/client-app/public/assets/i18n/shop/it.json
+++ b/client-app/public/assets/i18n/shop/it.json
@@ -30,6 +30,7 @@
     "Delete": "Elimina",
     "Mark sold": "Segnale venduto",
     "Manage": "Gestisci",
+    "Edit": "Modifica",
     "Loading product details...": "Caricamento dettagli prodotto...",
     "The": "Il ",
     "is published": "è pubblicato",
