--- a/client-app/public/assets/i18n/shop/de.json
+++ b/client-app/public/assets/i18n/shop/de.json
@@ -10,7 +10,7 @@
     "Favorites": "Favoriten",
     "My products": "Meine Produkte",
     "By people I follow": "Von Personen, denen ich folge",
-    "Inactive products": "Inaktive Produkte",
+    "My inactive products": "Meine inaktiven Produkte",
     "Title": "Titel",
     "Price": "Preis",
     "Published": "Veröffentlicht",
