--- a/client-app/public/assets/i18n/shop/en.json
+++ b/client-app/public/assets/i18n/shop/en.json
@@ -10,7 +10,7 @@
     "Favorites": "Favorites",
     "My products": "My products",
     "By people I follow": "By people I follow",
-    "Inactive products": "Inactive products",
+    "My inactive products": "My inactive products",
     "Title": "Title",
     "Price": "Price",
     "Published": "Published",
