--- a/client-app/public/assets/i18n/shop/it.json
+++ b/client-app/public/assets/i18n/shop/it.json
@@ -10,7 +10,7 @@
     "Favorites": "Preferiti",
     "My products": "I miei prodotti",
     "By people I follow": "Da persone che seguo",
-    "Inactive products": "Prodotti inattivi",
+    "My inactive products": "I miei prodotti inattivi",
     "Title": "Titolo",
     "Price": "Prezzo",
     "Published": "Pubblicato",
