MobileFilters Refactor for/and Translation

--- a/client-app/public/assets/i18n/mobile-info/it.json
+++ b/client-app/public/assets/i18n/mobile-info/it.json
@@ -3,5 +3,28 @@
     "Diaries I Follow": "Diari che seguo",
     "My diaries": "I miei diari",
     "Search diaries": "Cerca nei diari",
-    "Active diaries": "Diari attivi"
+    "Active diaries": "Diari attivi",
+    "Best rated": "I più votati",
+    "Most embraced": "Più abbracciati",
+    "Motofies I embraced": "Motofy che ho abbracciato",
+    "By people I follow": "Da persone che seguo",
+    "Search motofies": "Cerca motofies",
+    "All motofies": "Tutte le motofy",
+    "My posts": "I miei post",
+    "Posts I rated": "Post che ho valutato",
+    "Trending": "Trending",
+    "Posts I follow": "Post che seguo",
+    "Search by category": "Cerca per categoria",
+    "All posts": "Tutti i post del forum",
+    "I am customer": "Sono un cliente",
+    "Most recommended": "Più consigliato",
+    "Mechanics I follow": "Meccanica che seguo",
+    "Search by country": "Cerca per paese",
+    "Search all": "Cerca in tutto",
+    "All mechanics": "Tutte le meccaniche",
+    "Favorites": "Preferiti",
+    "My products": "I miei prodotti",
+    "My inactive products": "I miei prodotti inattivi",
+    "Search products": "Cerca prodotti",
+    "All products": "Tutti i prodotti"
 }
